# sss-cli

./: .gitignore  Cargo.toml  build.rs
sss/: .editorconfig  LICENSE  Makefile  README.md  hazmat.h  randombytes.c  randombytes.h  sss.c  sss.h  test_hazmat.c  test_sss.c  tweetnacl.h
sss/randombytes/: README.md  appveyor.yml
