[package]
name = "shamirsecretsharing-cli"
version = "0.1.1"
authors = ["Daan Sprenkels <hello@dsprenkels.com>"]

[[bin]]
name = "secret-share-split"
path = "src/bin/split.rs"

[[bin]]
name = "secret-share-combine"
path = "src/bin/combine.rs"

[[bin]]
name = "echo"
path = "src/bin/echo.rs"

[dependencies]
atty = "0.2"
env_logger = "0.6"
libc = "0.2"
log = "0.4"
rand = "0.7"
# shamirsecretsharing = "=0.1.4"
shamirsecretsharing = { path = "../sss-rs" }

[dependencies.clap]
version = "2.25"
default-features = false
features = [ "suggestions", "color" ]

[dev-dependencies]
duct = "0.12"

[build-dependencies]
cc = "1.0"
